refactor: change of interface from gov_action and index to gov_action+index concatenated.
